fixed text overflow with image

--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,7 @@ html, body {
 
 #location-picture-container {
 	width: 100%;
-	height:190px;
+	height:180px;
 	overflow: hidden;
 	position:absolute;
 	bottom: 50px;
